--- a/website/package.json
+++ b/website/package.json
@@ -3,12 +3,17 @@
     "examples": "docusaurus-examples",
     "start": "docusaurus-start",
     "build": "docusaurus-build",
-    "publish-gh-pages": "docusaurus-publish",
+    "deploy": "docusaurus-publish",
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
     "rename-version": "docusaurus-rename-version"
   },
   "devDependencies": {
-    "docusaurus": "^1.14.6"
+    "@docusaurus/core": "2.0.0-alpha.49",
+    "@docusaurus/preset-classic": "2.0.0-alpha.49"
+  },
+  "dependencies": {
+    "@docusaurus/core": "2.0.0-alpha.49",
+    "@docusaurus/preset-classic": "2.0.0-alpha.49"
   }
 }
