--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,7 @@
     "rename-version": "docusaurus-rename-version"
   },
   "devDependencies": {
+    "docusaurus": "^1.14.6",
     "@docusaurus/core": "2.0.0-alpha.49",
     "@docusaurus/preset-classic": "2.0.0-alpha.49"
   },
